--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "http://Sluchevska.github.io/goit-js-hw-09-gallery",
+  "homepage": "http://sluchevska.github.io/goit-js-hw-09-gallery",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-09-gallery/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sluchevska/goit-js-hw-09-gallery.git"
+    "url": "git+https://github.com/sluchevska/goit-js-hw-09-gallery.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
